creates session helper

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,5 +19,8 @@
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
+    <div class="margin-top">
+          Already a User? <button><%= link_to "Log in here", login_url %> </button>
+</div>
   </div>
 </div>
