--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,5 +4,7 @@
     <h2>
       There will be no more forgetting.
     </h2>
+        <p>New user? <%= link_to "Sign up now!", signup_path %></p>
+
 
   </div>
