--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,5 @@
       There will be no more forgetting.
     </h2>
         <p>New user? <%= link_to "Sign up now!", signup_path %></p>
-
-
+        <p>Loggin In? <%= link_to "login!", login_path %></p>
   </div>
